--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
+    "postcss-pxtorem": "^4.0.1",
+    "px2rem-loader": "^0.1.9",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
