--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-pxtorem": "^4.0.1",
     "px2rem-loader": "^0.1.9",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-movefiles": "^1.1.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
